Fix writing of 16-bit transparency masks to a PSD file

BUG:376836